--- a/Application.UI/Application.UI.csproj
+++ b/Application.UI/Application.UI.csproj
@@ -111,6 +111,10 @@
       <Project>{532B3886-E825-457D-A362-D2D6B62C5281}</Project>
       <Name>Application.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Application.DataAccess\Application.DataAccess.csproj">
+      <Project>{61d8f3e4-959d-43d1-ac1e-f66637bf44e4}</Project>
+      <Name>Application.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Application.Models\Application.Models.csproj">
       <Project>{fab8b881-7bc0-4aef-9888-2f7eed2da536}</Project>
       <Name>Application.Models</Name>
